updated plugins API documentation

--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -110,6 +110,8 @@ Index
 - [`createDatabaseObject()`](Piwik/Db.md#createDatabaseObject) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`copy()`](Piwik/Filesystem.md#copy) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
 - [`copyRecursive()`](Piwik/Filesystem.md#copyRecursive) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
+- [`$context()`](Piwik/Notification.md#$context) &mdash; _Property in class_ [`Notification`](Piwik/Notification.md)
+- [`cancel()`](Piwik/Notification/Manager.md#cancel) &mdash; _Method in class_ [`Manager`](Piwik/Notification/Manager.md)
 - [`clearCache()`](Piwik/Option.md#clearCache) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
 - [`checkUserIsSuperUserOrTheUser()`](Piwik/Piwik.md#checkUserIsSuperUserOrTheUser) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`checkUserIsNotAnonymous()`](Piwik/Piwik.md#checkUserIsNotAnonymous) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
@@ -246,6 +248,7 @@ Index
 - [`FrontController`](Piwik/FrontController.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`fetchDispatch()`](Piwik/FrontController.md#fetchDispatch) &mdash; _Method in class_ [`FrontController`](Piwik/FrontController.md)
 - [`fetchRemoteFile()`](Piwik/Http.md#fetchRemoteFile) &mdash; _Method in class_ [`Http`](Piwik/Http.md)
+- [`$flags()`](Piwik/Notification.md#$flags) &mdash; _Property in class_ [`Notification`](Piwik/Notification.md)
 - [`factory()`](Piwik/Period.md#factory) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`Factory`](Piwik/ViewDataTable/Factory.md) &mdash; _Class in namespace_ [`Piwik\ViewDataTable`](Piwik/ViewDataTable)
 
@@ -352,6 +355,7 @@ Index
 - [`getNonce()`](Piwik/Nonce.md#getNonce) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
 - [`getOrigin()`](Piwik/Nonce.md#getOrigin) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
 - [`getAcceptableOrigins()`](Piwik/Nonce.md#getAcceptableOrigins) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
+- [`getAll()`](Piwik/Notification/Manager.md#getAll) &mdash; _Method in class_ [`Manager`](Piwik/Notification/Manager.md)
 - [`get()`](Piwik/Option.md#get) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
 - [`getDateStart()`](Piwik/Period.md#getDateStart) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`getDateEnd()`](Piwik/Period.md#getDateEnd) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
@@ -499,6 +503,7 @@ Index
 - [`info()`](Piwik/Log.md#info) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
 - [`isUrlFound()`](Piwik/Menu/MenuMain.md#isUrlFound) &mdash; _Method in class_ [`MenuMain`](Piwik/Menu/MenuMain.md)
 - [`isLowerValueBetter()`](Piwik/Metrics.md#isLowerValueBetter) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
+- [`$icon()`](Piwik/Notification.md#$icon) &mdash; _Property in class_ [`Notification`](Piwik/Notification.md)
 - [`isMultiplePeriod()`](Piwik/Period.md#isMultiplePeriod) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`isUserIsSuperUserOrTheUser()`](Piwik/Piwik.md#isUserIsSuperUserOrTheUser) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`isUserIsSuperUser()`](Piwik/Piwik.md#isUserIsSuperUser) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
@@ -568,6 +573,8 @@ Index
 - [`$mappingFromIdToNameGoal()`](Piwik/Metrics.md#$mappingFromIdToNameGoal) &mdash; _Property in class_ [`Metrics`](Piwik/Metrics.md)
 - [`$mappingFromNameToId()`](Piwik/Metrics.md#$mappingFromNameToId) &mdash; _Property in class_ [`Metrics`](Piwik/Metrics.md)
 - [`MetricsFormatter`](Piwik/MetricsFormatter.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`$message()`](Piwik/Notification.md#$message) &mdash; _Property in class_ [`Notification`](Piwik/Notification.md)
+- [`Manager`](Piwik/Notification/Manager.md) &mdash; _Class in namespace_ [`Piwik\Notification`](Piwik/Notification)
 - [`makePeriodFromQueryParams()`](Piwik/Period.md#makePeriodFromQueryParams) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`Manager`](Piwik/Plugin/Manager.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
 - [`$methodName()`](Piwik/ScheduledTask.md#$methodName) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
@@ -580,6 +587,8 @@ Index
 - [`now()`](Piwik/Date.md#now) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`N2P()`](Piwik/IP.md#N2P) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`Nonce`](Piwik/Nonce.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`Notification`](Piwik/Notification.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`notify()`](Piwik/Notification/Manager.md#notify) &mdash; _Method in class_ [`Manager`](Piwik/Notification/Manager.md)
 
 ### O
 
@@ -599,6 +608,7 @@ Index
 - [`PatternRecursive`](Piwik/DataTable/Filter/PatternRecursive.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
 - [`P2N()`](Piwik/IP.md#P2N) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`prettyPrint()`](Piwik/IP.md#prettyPrint) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
+- [`$priority()`](Piwik/Notification.md#$priority) &mdash; _Property in class_ [`Notification`](Piwik/Notification.md)
 - [`Period`](Piwik/Period.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`parseDateRange()`](Piwik/Period/Range.md#parseDateRange) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`Piwik`](Piwik/Piwik.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
@@ -732,6 +742,7 @@ Index
 - [`Truncate`](Piwik/DataTable/Filter/Truncate.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
 - [`toString()`](Piwik/Date.md#toString) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`today()`](Piwik/Date.md#today) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
+- [`$title()`](Piwik/Notification.md#$title) &mdash; _Property in class_ [`Notification`](Piwik/Notification.md)
 - [`toString()`](Piwik/Period.md#toString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`translate()`](Piwik/Piwik.md#translate) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`translateException()`](Piwik/Piwik.md#translateException) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
