--- a/docs/master/1. Namespaces.md
+++ b/docs/master/1. Namespaces.md
@@ -10,6 +10,7 @@ This is a complete list of available namespaces:
 - [`Piwik\DataTable`](Piwik/DataTable)
 - [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
 - [`Piwik\Menu`](Piwik/Menu)
+- [`Piwik\Notification`](Piwik/Notification)
 - [`Piwik\Period`](Piwik/Period)
 - [`Piwik\Plugin`](Piwik/Plugin)
 - [`Piwik\Plugins`](Piwik/Plugins)
