--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -54,6 +54,8 @@ This is a complete list of available classes:
 - [`Piwik\Metrics`](Piwik/Metrics.md) &mdash; This class contains metadata regarding core metrics and contains several related helper functions.
 - [`Piwik\MetricsFormatter`](Piwik/MetricsFormatter.md) &mdash; Contains helper function that format numerical values in different ways.
 - [`Piwik\Nonce`](Piwik/Nonce.md) &mdash; Nonce class.
+- [`Piwik\Notification`](Piwik/Notification.md)
+- [`Piwik\Notification\Manager`](Piwik/Notification/Manager.md)
 - [`Piwik\Option`](Piwik/Option.md) &mdash; Convenient key-value storage for user specified options and temporary data that needs to be persisted beyond one request.
 - [`Piwik\Period`](Piwik/Period.md) &mdash; Date range representation.
 - [`Piwik\Period\Range`](Piwik/Period/Range.md) &mdash; Arbitrary date range representation.
