updated plugins API documentation

--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -355,7 +355,7 @@ Index
 - [`getNonce()`](Piwik/Nonce.md#getNonce) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
 - [`getOrigin()`](Piwik/Nonce.md#getOrigin) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
 - [`getAcceptableOrigins()`](Piwik/Nonce.md#getAcceptableOrigins) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
-- [`getAll()`](Piwik/Notification/Manager.md#getAll) &mdash; _Method in class_ [`Manager`](Piwik/Notification/Manager.md)
+- [`getAllNotificationsToDisplay()`](Piwik/Notification/Manager.md#getAllNotificationsToDisplay) &mdash; _Method in class_ [`Manager`](Piwik/Notification/Manager.md)
 - [`get()`](Piwik/Option.md#get) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
 - [`getDateStart()`](Piwik/Period.md#getDateStart) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`getDateEnd()`](Piwik/Period.md#getDateEnd) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
@@ -480,6 +480,7 @@ Index
 ### H
 
 - [`Http`](Piwik/Http.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`hasNoClear()`](Piwik/Notification.md#hasNoClear) &mdash; _Method in class_ [`Notification`](Piwik/Notification.md)
 - [`Hourly`](Piwik/ScheduledTime/Hourly.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
 
 ### I
@@ -743,6 +744,7 @@ Index
 - [`toString()`](Piwik/Date.md#toString) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`today()`](Piwik/Date.md#today) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`$title()`](Piwik/Notification.md#$title) &mdash; _Property in class_ [`Notification`](Piwik/Notification.md)
+- [`$type()`](Piwik/Notification.md#$type) &mdash; _Property in class_ [`Notification`](Piwik/Notification.md)
 - [`toString()`](Piwik/Period.md#toString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`translate()`](Piwik/Piwik.md#translate) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`translateException()`](Piwik/Piwik.md#translateException) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
