updated plugins API documentation

--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -822,6 +822,7 @@ Index
 - [`__toString()`](Piwik/DataTable/Row.md#__toString) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`__toString()`](Piwik/Date.md#__toString) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`__construct()`](Piwik/Mail.md#__construct) &mdash; _Method in class_ [`Mail`](Piwik/Mail.md)
+- [`__construct()`](Piwik/Notification.md#__construct) &mdash; _Method in class_ [`Notification`](Piwik/Notification.md)
 - [`__construct()`](Piwik/Period.md#__construct) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`__toString()`](Piwik/Period.md#__toString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`__construct()`](Piwik/Period/Range.md#__construct) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
