updated plugins API documentation

--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -111,6 +111,7 @@ Index
 - [`copy()`](Piwik/Filesystem.md#copy) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
 - [`copyRecursive()`](Piwik/Filesystem.md#copyRecursive) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
 - [`$context()`](Piwik/Notification.md#$context) &mdash; _Property in class_ [`Notification`](Piwik/Notification.md)
+- [`cancelAllNonPersistent()`](Piwik/Notification/Manager.md#cancelAllNonPersistent) &mdash; _Method in class_ [`Manager`](Piwik/Notification/Manager.md)
 - [`cancel()`](Piwik/Notification/Manager.md#cancel) &mdash; _Method in class_ [`Manager`](Piwik/Notification/Manager.md)
 - [`clearCache()`](Piwik/Option.md#clearCache) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
 - [`checkUserIsSuperUserOrTheUser()`](Piwik/Piwik.md#checkUserIsSuperUserOrTheUser) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
