updated plugins API documentation

--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -353,6 +353,7 @@ Index
 - [`getNonce()`](Piwik/Nonce.md#getNonce) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
 - [`getOrigin()`](Piwik/Nonce.md#getOrigin) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
 - [`getAcceptableOrigins()`](Piwik/Nonce.md#getAcceptableOrigins) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
+- [`getPriority()`](Piwik/Notification.md#getPriority) &mdash; _Method in class_ [`Notification`](Piwik/Notification.md)
 - [`get()`](Piwik/Option.md#get) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
 - [`getDateStart()`](Piwik/Period.md#getDateStart) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`getDateEnd()`](Piwik/Period.md#getDateEnd) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
