updated plugins API documentation

--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -106,6 +106,7 @@ Index
 - [`compareElements()`](Piwik/DataTable/Row.md#compareElements) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`compareWeek()`](Piwik/Date.md#compareWeek) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`compareMonth()`](Piwik/Date.md#compareMonth) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
+- [`compareYear()`](Piwik/Date.md#compareYear) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`createDatabaseObject()`](Piwik/Db.md#createDatabaseObject) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`copy()`](Piwik/Filesystem.md#copy) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
 - [`copyRecursive()`](Piwik/Filesystem.md#copyRecursive) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
