updated plugins API documentation

--- a/docs/master/1. Namespaces.md
+++ b/docs/master/1. Namespaces.md
@@ -25,7 +25,7 @@ This is a complete list of available namespaces:
 - [`Piwik\Plugins\DBStats`](Piwik/Plugins/DBStats)
 - [`Piwik\Plugins\Dashboard`](Piwik/Plugins/Dashboard)
 - [`Piwik\Plugins\DevicesDetection`](Piwik/Plugins/DevicesDetection)
-- [`Piwik\Plugins\ExamplePluginTemplate`](Piwik/Plugins/ExamplePluginTemplate)
+- [`Piwik\Plugins\ExamplePlugin`](Piwik/Plugins/ExamplePlugin)
 - [`Piwik\Plugins\ExampleRssWidget`](Piwik/Plugins/ExampleRssWidget)
 - [`Piwik\Plugins\ExampleUI`](Piwik/Plugins/ExampleUI)
 - [`Piwik\Plugins\Feedback`](Piwik/Plugins/Feedback)
