--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -80,7 +80,7 @@ This is a complete list of available classes:
 - [`Piwik\Plugins\DBStats\Controller`](Piwik/Plugins/DBStats/Controller.md)
 - [`Piwik\Plugins\Dashboard\Controller`](Piwik/Plugins/Dashboard/Controller.md) &mdash; Dashboard Controller
 - [`Piwik\Plugins\DevicesDetection\Controller`](Piwik/Plugins/DevicesDetection/Controller.md)
-- [`Piwik\Plugins\ExamplePluginTemplate\Controller`](Piwik/Plugins/ExamplePluginTemplate/Controller.md)
+- [`Piwik\Plugins\ExamplePlugin\Controller`](Piwik/Plugins/ExamplePlugin/Controller.md)
 - [`Piwik\Plugins\ExampleRssWidget\Controller`](Piwik/Plugins/ExampleRssWidget/Controller.md)
 - [`Piwik\Plugins\ExampleUI\Controller`](Piwik/Plugins/ExampleUI/Controller.md)
 - [`Piwik\Plugins\Feedback\Controller`](Piwik/Plugins/Feedback/Controller.md)
