updated plugins API documentation

--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -618,6 +618,8 @@ Index
 ### Q
 
 - [`queryVisitsByDimension()`](Piwik/DataAccess/LogAggregator.md#queryVisitsByDimension) &mdash; _Method in class_ [`LogAggregator`](Piwik/DataAccess/LogAggregator.md)
+- [`queryEcommerceItems()`](Piwik/DataAccess/LogAggregator.md#queryEcommerceItems) &mdash; _Method in class_ [`LogAggregator`](Piwik/DataAccess/LogAggregator.md)
+- [`queryActionsByDimension()`](Piwik/DataAccess/LogAggregator.md#queryActionsByDimension) &mdash; _Method in class_ [`LogAggregator`](Piwik/DataAccess/LogAggregator.md)
 - [`queueFilter()`](Piwik/DataTable.md#queueFilter) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`queueFilter()`](Piwik/DataTable/Map.md#queueFilter) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`query()`](Piwik/Db.md#query) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
