updated plugins API documentation

--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -112,7 +112,7 @@ This is a complete list of available classes:
 - [`Piwik\Plugins\VisitsSummary\Controller`](Piwik/Plugins/VisitsSummary/Controller.md)
 - [`Piwik\Plugins\Widgetize\Controller`](Piwik/Plugins/Widgetize/Controller.md)
 - [`Piwik\RankingQuery`](Piwik/RankingQuery.md) &mdash; The ranking query class wraps an arbitrary SQL query with more SQL that limits the number of results while grouping the rest to &quot;Others&quot; and allows for some more fancy things that can be configured via method calls of this class.
-- [`Piwik\ScheduledTask`](Piwik/ScheduledTask.md) &mdash; ScheduledTask is used by the task scheduler and by plugins to configure runnable tasks.
+- [`Piwik\ScheduledTask`](Piwik/ScheduledTask.md) &mdash; Contains metadata describing and referencing a chunk of PHP code that should be executed regularly.
 - [`Piwik\ScheduledTime\Daily`](Piwik/ScheduledTime/Daily.md) &mdash; Daily class is used to schedule tasks every day.
 - [`Piwik\ScheduledTime\Hourly`](Piwik/ScheduledTime/Hourly.md) &mdash; Hourly class is used to schedule tasks every hour.
 - [`Piwik\ScheduledTime\Monthly`](Piwik/ScheduledTime/Monthly.md) &mdash; Monthly class is used to schedule tasks every month.
