--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -165,7 +165,6 @@ Index
 - [`Controller`](Piwik/Plugins/VisitorInterest/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\VisitorInterest`](Piwik/Plugins/VisitorInterest)
 - [`Controller`](Piwik/Plugins/VisitsSummary/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\VisitsSummary`](Piwik/Plugins/VisitsSummary)
 - [`Controller`](Piwik/Plugins/Widgetize/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Widgetize`](Piwik/Plugins/Widgetize)
-- [`$className()`](Piwik/ScheduledTask.md#$className) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`clearCache()`](Piwik/Site.md#clearCache) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`clearCompiledTemplates()`](Piwik/View.md#clearCompiledTemplates) &mdash; _Method in class_ [`View`](Piwik/View.md)
 
@@ -409,6 +408,7 @@ Index
 - [`getRescheduledTime()`](Piwik/ScheduledTime/Hourly.md#getRescheduledTime) &mdash; _Method in class_ [`Hourly`](Piwik/ScheduledTime/Hourly.md)
 - [`getRescheduledTime()`](Piwik/ScheduledTime/Monthly.md#getRescheduledTime) &mdash; _Method in class_ [`Monthly`](Piwik/ScheduledTime/Monthly.md)
 - [`getRescheduledTime()`](Piwik/ScheduledTime/Weekly.md#getRescheduledTime) &mdash; _Method in class_ [`Weekly`](Piwik/ScheduledTime/Weekly.md)
+- [`getDayIntFromString()`](Piwik/ScheduledTime/Weekly.md#getDayIntFromString) &mdash; _Method in class_ [`Weekly`](Piwik/ScheduledTime/Weekly.md)
 - [`getString()`](Piwik/Segment.md#getString) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
 - [`getHash()`](Piwik/Segment.md#getHash) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
 - [`getSelectQuery()`](Piwik/Segment.md#getSelectQuery) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
@@ -574,8 +574,6 @@ Index
 - [`Manager`](Piwik/Notification/Manager.md) &mdash; _Class in namespace_ [`Piwik\Notification`](Piwik/Notification)
 - [`makePeriodFromQueryParams()`](Piwik/Period.md#makePeriodFromQueryParams) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`Manager`](Piwik/Plugin/Manager.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
-- [`$methodName()`](Piwik/ScheduledTask.md#$methodName) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
-- [`$methodParameter()`](Piwik/ScheduledTask.md#$methodParameter) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`Monthly`](Piwik/ScheduledTime/Monthly.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
 
 ### N
@@ -591,7 +589,6 @@ Index
 
 - [`optimizeTables()`](Piwik/Db.md#optimizeTables) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`Option`](Piwik/Option.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
-- [`$objectInstance()`](Piwik/ScheduledTask.md#$objectInstance) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`overrideLocation()`](Piwik/Tracker/Request.md#overrideLocation) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
 
 ### P
@@ -613,7 +610,6 @@ Index
 - [`Plugin`](Piwik/Plugin.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`postLoad()`](Piwik/Plugin.md#postLoad) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`partitionResultIntoMultipleGroups()`](Piwik/RankingQuery.md#partitionResultIntoMultipleGroups) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
-- [`$priority()`](Piwik/ScheduledTask.md#$priority) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 
 ### Q
 
@@ -711,10 +707,10 @@ Index
 - [`setOthersLabel()`](Piwik/RankingQuery.md#setOthersLabel) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
 - [`setColumnToMarkExcludedRows()`](Piwik/RankingQuery.md#setColumnToMarkExcludedRows) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
 - [`ScheduledTask`](Piwik/ScheduledTask.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
-- [`$scheduledTime()`](Piwik/ScheduledTask.md#$scheduledTime) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`setDay()`](Piwik/ScheduledTime/Daily.md#setDay) &mdash; _Method in class_ [`Daily`](Piwik/ScheduledTime/Daily.md)
 - [`setHour()`](Piwik/ScheduledTime/Hourly.md#setHour) &mdash; _Method in class_ [`Hourly`](Piwik/ScheduledTime/Hourly.md)
 - [`setDay()`](Piwik/ScheduledTime/Hourly.md#setDay) &mdash; _Method in class_ [`Hourly`](Piwik/ScheduledTime/Hourly.md)
+- [`setDayOfWeekFromString()`](Piwik/ScheduledTime/Monthly.md#setDayOfWeekFromString) &mdash; _Method in class_ [`Monthly`](Piwik/ScheduledTime/Monthly.md)
 - [`setDay()`](Piwik/ScheduledTime/Monthly.md#setDay) &mdash; _Method in class_ [`Monthly`](Piwik/ScheduledTime/Monthly.md)
 - [`setDayOfWeek()`](Piwik/ScheduledTime/Monthly.md#setDayOfWeek) &mdash; _Method in class_ [`Monthly`](Piwik/ScheduledTime/Monthly.md)
 - [`setDay()`](Piwik/ScheduledTime/Weekly.md#setDay) &mdash; _Method in class_ [`Weekly`](Piwik/ScheduledTime/Weekly.md)
